<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/md_keylines"
    android:layout_marginStart="@dimen/md_keylines"
    android:layout_marginEnd="@dimen/md_keylines"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/profile_image"
            android:id="@+id/list_avatar"
            android:layout_marginTop="@dimen/md_keylines"
            android:layout_marginStart="@dimen/md_keylines"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/b" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_keylines"
            android:layout_marginStart="@dimen/md_keylines"
            android:layout_toEndOf="@+id/list_avatar"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/item_author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author"
            android:layout_marginStart="@dimen/md_keylines"
            android:layout_toEndOf="@+id/list_avatar"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/list_body"
            tools:text="@string/item_published" />


        <ImageView
            android:contentDescription="@string/profile_image"
            android:layout_marginTop="8dp"
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_below="@id/list_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/a" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="128dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/card_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_image"
            android:layout_margin="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="The Qucik brown fox jumped over the lazy dog" />

        <Button
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_text"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="?attr/colorPrimary"
            android:text="@string/detail" />

        <ImageButton
            android:contentDescription="@string/share_button"
            android:id="@+id/share_button"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_marginEnd="@dimen/md_keylines"
            app:srcCompat="@drawable/ic_share"
            android:layout_below="@+id/card_text"
            android:layout_alignParentEnd="true"
            style="?android:attr/borderlessButtonStyle"
            android:tint="@color/colorPrimary" />

        <ImageButton
            android:contentDescription="@string/favorite_button"
            android:id="@+id/favorite_button"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_marginEnd="@dimen/md_keylines"
            app:srcCompat="@drawable/ic_favorite"
            android:layout_below="@+id/card_text"
            android:layout_toStartOf="@id/share_button"
            style="?android:attr/borderlessButtonStyle"
            android:tint="@color/button_grey" />

    </RelativeLayout>

</android.support.v7.widget.CardView>