<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.NoteDetailActivity"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/md_keylines"
        android:layout_marginEnd="@dimen/md_keylines"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.Shrine.CollapsingToolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:contentDescription="@string/note_image"
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.75"/>

            <LinearLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_overlay"
                style="@style/Widget.Shrine.CollapsingToolbarContent"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.65">

                <ImageView
                    android:id="@+id/list_avatar"
                    android:contentDescription="@string/profile_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginEnd="@dimen/md_keylines"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/container_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/published_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <ImageButton
                    android:contentDescription="@string/favorite_button"
                    android:id="@+id/favorite_button"
                    android:layout_width="@dimen/cards_button_width"
                    android:layout_height="@dimen/cards_button_height"
                    android:layout_gravity="right"
                    app:srcCompat="@drawable/ic_favorite"
                    style="?android:attr/borderlessButtonStyle"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/like_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                app:titleMarginStart="32dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginStart="@dimen/md_keylines"
        android:layout_marginEnd="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:layout_marginBottom="@dimen/md_keylines"
        android:onClick="onShareClicked"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_share" />

</android.support.design.widget.CoordinatorLayout>